[package]
name = "audit"
version = "0.3.0"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "ip", "linux", "audit"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "linux audit via netlink"

[dependencies]
futures = "0.3.1"
thiserror = "1"
netlink-packet-audit = { path = "../netlink-packet-audit", version = "0.2" }
netlink-proto = { path = "../netlink-proto", features = ["workaround-audit-bug"], version = "0.6" }

[dev-dependencies]
env_logger = "0.8.2"
tokio = { version = "0.2.6", default-features = false, features = ["macros", "rt-core"] }
